if (EMSCRIPTEN)
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -s EXPORTED_FUNCTIONS='[\"_compileJSON\",\"_license\",\"_version\",\"_compileJSONMulti\",\"_compileJSONCallback\",\"_compileStandard\"]' -s RESERVED_FUNCTION_POINTERS=20")
	add_executable(soljson liblityc.cpp)
	target_link_libraries(soljson PRIVATE lity)
else()
	add_library(liblityc liblityc.cpp)
	set_target_properties(liblityc PROPERTIES OUTPUT_NAME lityc)
	target_link_libraries(liblityc PRIVATE lity)
endif()
